--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>lion_thippila</title>
   
   <meta name="description" content="Portfolio of Siraphop Thippila (LION_THIPPILA)">
-  <meta property="og:title" content="LION_THIPPILA Portfolio" />
+  <meta property="og:title" content="lion_thippila" />
   <meta property="og:description" content="Siraphop Thippila's personal website" />
-  <meta property="og:image" content="https://lionthippila.github.io/preview.jpg" />
+  <meta property="og:image" content="/profile2.webp" />
   <meta property="og:url" content="https://lionthippila.github.io/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -343,3 +343,4 @@
   </script>
 </body>
 </html>
+
