--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Portfolio of Siraphop Thippila (LION_THIPPILA)">
   <meta property="og:title" content="lion_thippila" />
   <meta property="og:description" content="Siraphop Thippila's personal website" />
-  <meta property="og:image" content="/profile2.webp" />
+  <meta property="og:image" content="https://img2.pic.in.th/pic/S__29982724.jpg" />
   <meta property="og:url" content="https://lionthippila.github.io/" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -343,4 +343,5 @@
   </script>
 </body>
 </html>
+
 
